--- a/index.html
+++ b/index.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>system44</title>
     <link rel="stylesheet" type="text/css" href="src/styles.css">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>system44</title>
 </head>
 <body>
 
-<h1>system44</h1>
+<header>
+    <h1>system44</h1>
+    <p>minimal open source software</p>
+</header>
 
-<p>minimal open source software</p>
+<section>
+    <h2>mirrors</h2>
+    <ul>
+        <li><a href="https://github.com/sys44">github</a> <span class="small">(main development)</span></li>
+        <li><a href="https://codeberg.org/System44">codeberg</a> <span class="small">(mirror)</span></li>
+    </ul>
+</section>
 
-<h2>mirrors</h2>
+<section>
+    <h2>projects</h2>
+    <ul>
+        <li><a href="https://codeberg.org/System44/fjord">fjord</a> — unix-like os from scratch</li>
+        <li><a href="https://codeberg.org/PS2Comrade/pulsar">pulsar</a> — web engine from scratch</li>
+        <li><a href="https://github.com/PS2Comrade/ccc">ccc</a> — ccc or çetin c compiler, c compiler from scratch</li>
+        <li><a href="https://github.com/PS2Comrade/xsh">xsh</a> — unix shell from scratch</li>
+        <li><a href="https://github.com/PS2Comrade/mipsem">mipsem</a> — mips architecture emulator written in c</li>
+    </ul>
+</section>
 
-<ul>
-  <li><a href="https://github.com/sys44">github</a> <span class="small">(main development)</span></li>
-  <li><a href="https://codeberg.org/System44">codeberg</a> <span class="small">(mirror)</span></li>
-</ul>
+<section>
+    <h2>philosophy</h2>
+    <blockquote>
+        <p>"An idiot admires complexity, A genius admires simplicity."</p>
+    </blockquote>
+</section>
 
-<h2>projects</h2>
-
-<ul>
-  <li><a href="https://codeberg.org/System44/fjord">fjord</a> — unix-like os
- from scratch</li>
-</ul>
-
-<h2>philosophy</h2>
-
-<p>
-  "An idiot admires complexity, A genius admires simplicity."
-</p>
+<section>
+    <h2>contributors</h2>
+    
+    <ul class="contributors">
+        <li>
+            <a href="https://github.com/PS2Comrade">PS2Comrade</a>
+            <span class="small">— co-dev · pulsar · ccc · mipsem</span>
+        </li>
+        
+        <li>
+            <a href="https://codeberg.org/segmentnotpresent">VeryEpicKebap</a>
+            <span class="small">— main-dev · fjord · xsh · xcoreutils</span>
+        </li>
+        <li>
+            <a href="https://github.com/gingrspacecadet">gingrspacecadet</a>
+            <span class="small">— lesbian :3 · delta-os</span>
+        </li>
+    </ul>
+</section>
 
 <footer>
-  <p>© system44 • public domain • GPL • system44-org@proton.me</p>
+    <p>© system44 • public domain • GPL • system44-org@proton.me</p>
 </footer>
 
 </body>
